- Fix text being too small

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -150,7 +150,7 @@ a {
 @media (max-width: 395px) {
 
     .glass-content {
-        font-size: 5.5px;
+        font-size: 10px;
     }
 
 }
